====NEWS ABOUT TEA====
TEA 60.6.0, October 2021
---------------------------------------------------
http://tea.ourproject.org
---------------------------------------------------

    + Spanish UI translation by Luis Montgomery.

   Stay tuned.
   Peter Semiletov