@@ -1,9 +1,10 @@
 =====НОВОСТИ ПРО ТИА====
-ТИА 60.6.0, октябрь 2021
+ТИА 60.7.0, януарий 2022
 ======================
 http://tea.ourproject.org
 ---------------------------------------------------
 
-   Добавлен перевод интерфейса на испанский язык. Спасибо Luis Montgomery.
+   Исправлена вся хоботня с запуском внешних процессов при сборке с Qt6. Кое-что подправлено со включенной в ТИА сторонней библиотекой Quazip. Добавлена поддержка создаваемых пользователем виртуальных (для мыши) клавиатур, для быстрого ввода символов разных алфавитов или даже целых слов (см. в документации про "Клавиатуры" в меню "Вид").
+
 
    С кирпичным пролетарским приветом, Петр Семилетов!
