@@ -1,3 +1,5 @@
+* при смене профиля, глючит переключение палитры, изучить!
+
 * темы оформления в Win32 глючат при стиле интерфейса Windows XP
 
 make single application with Dbus?
