@@ -882,6 +882,16 @@ The input dialog box will be provided. Then, walk through your directories. Sele
 <p><b>Profiles</b> - this menu allows you to switch between view profiles (they includes parameters such as window position, size, fonts, word wrap and line numbering settings, etc.). So you can save your current settings via <b>Save profile</b> function, and named profile will appear in the <b>Profiles</b> menu. In any time you can select it to recall saved settings.</p>
 
 
+<p><b>Keyboards</b> - the list of user-defined keyboards. TEA show such "keyboard" as the window with buttons. Each button can be the letter or the word or any string, to simplify inputm for example, foreign alphabet letters or difficult words.</p>
+
+<p>The "keyboard" is a simple text file that you put to <i>$HOME/.config/tea/keyboards</i> directory. Each line of the file contain letters or words separated by "|", for example:</p>
+
+<p>
+dog|cat<br>
+apple|orange
+</p>
+
+
 <br>
 <a name="mni_prefs"></a>
 <h3>Options tab</h3>
