@@ -833,6 +833,17 @@ page100.txt
 
 <p><b>Переключить перенос строк</b> - переключает оный для текущего документа.</p>
 
+
+<p><b>Клавиатуры</b> - список созданных пользователем виртуальных "клавиатур", которые открываются в отдельных окнах. Каждая такая клавиатура - обычный текстовый файл, положенный в <i>$HOME/.config/tea/keyboards</i>. В таком файле содержатся строки, разделенные символом "|". Каждая строка - один ряд создаваемой клавиатуры. Пример:
+</p>
+
+<p>
+dog|cat<br>
+apple|orange
+</p>
+
+<p>Таким образом можно создать клавиатуру для быстрого ввода символов какого-либо алфавита или целых слов, строк.</p>
+
 <br>
 <a name="mni_prefs"></a>
 <h2>Настройки</h2>
